# t96-cpp

./: AGENTS  CMakeLists.txt  README.md
src/: CMakeLists.txt  makefile  t96.cc  t96.h
tests/: CMakeLists.txt  testfortran.cc  testfortran_gtest.cpp
